# ADAPTIVE-LEARNING-PLATFORM

./: .gitignore  docker-compose.yaml  init.sql
import-exercise-batch/: README.md  draft.md  pyproject.toml  pyrightconfig.json
import-exercise-batch/config/: tags_config.json
import-exercise-batch/data/: import_exercises.csv  import_exercises.db
import-exercise-batch/docs/: architecture.md
import-exercise-batch/libs/clients/codereview/: README.md  pyproject.toml  setup.py
import-exercise-batch/libs/clients/codereviewai/: .gitlab-ci.yml  .travis.yml  README.md  pyproject.toml  setup.py  tox.ini
import-exercise-batch/libs/clients/codereviewapi/: .gitlab-ci.yml  setup.py  (+4 more)
import-exercise-batch/src/import_exercise_batch/: config.py  main.py
import-exercise-batch/tests/: test_code_review_subprocess.py  test_exercise_database_subprocess.py  test_import_exercises_mainprocess.py
review-agent/: .dockerignore  Dockerfile  main.py  pyproject.toml  requirements.txt
review-agent/app/: __init__.py  app.py  cli.py  config.py
review-agent/app/agents/: concept_mapping_agent.py  exercise_weight_agent.py  fix_hint_agent.py  generate_testcase_agent.py  improvement_agent.py  logic_agent.py  overview_agent.py  prerequisite_weight_agent.py  reflection_agent.py  review_link_agent.py  scoring_agent.py
review-agent/app/api/: knowledge_graph_deps.py  knowledge_graph_route.py  knowledge_graph_schema.py  recommendation_deps.py  recommendation_route.py  recommendation_schema.py  review_code_deps.py  review_code_route.py  review_code_schema.py
review-agent/app/config/: __init__.py  env_config.py  model_config.py
review-agent/app/models/: exercise_record.py  generate_testcase.py  improvement_note.py  knowledge_graph.py  location.py  logic_issue.py  recommendation_framework.py  recommendation_state.py  review_item.py  review_link.py  review_state.py  sandbox_result.py  student_profile.py  student_record.py
review-agent/app/repositories/: __init__.py  knowledge_graph_repository.py
review-agent/app/services/: knowledge_graph_repository.py  recommendation_service.py  review_code_service.py
review-agent/app/tools/: __init__.py  execution_run_tool.py
review-agent/app/utils/: code_context.py  debug_logging.py  history_matcher.py  parse_json_response.py  review_context_tools.py  review_output_tools.py
review-agent/docs/: README.md  RULES.md  architecture.md  openapi.yaml  workflow.mermaid
review-agent/docs/api/: README.md  concept-api.md  exercise-api.md  knowledge-graph-snapshot-api.md  recommendation-api.md  review-code-api.md  review-import-api.md  student-profile-import-api.md
review-agent/docs/core/: knowledge-graph.md  review-agent.md
review-agent/docs/domain/: README.md  concept-weight-rules.md  exercise-recommendation-rules.md  knowledge-graph.md  recommendation-formulas.md  review-relationship-rules.md  submission-progression-rules.md
review-agent/docs/examples/: README.md
review-agent/docs/workflows/: README.md  knowledge-graph-flow.md  recommendation-flow.md  review-agent.md
review-agent/tests/agents/: test_fix_hint_agent.py  test_review_link_agent.py
review-agent/tests/prompts/: test_context_planner_prompt.py  test_fix_hint_prompt.py  test_improvement_prompt.py  test_model_config_overrides.py  test_review_json_repair_prompt.py  test_review_link_prompt.py  test_review_logic_prompt.py  test_scoring_prompt.py
review-agent/tests/utils/: test_code_context.py  test_history_matcher.py  test_review_output_tools.py  test_snippet_tools.py
(+1270 files in other folders)
