[project]
name = "import-exercise-batch"
version = "0.1.0"
description = "Batch job for importing LeetCode exercises."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "code_review_api_client",
    "python-dotenv>=1.0",
    "psycopg[binary]>=3.2",
    "code_review_ai_client",
]

[project.scripts]
import-exercise-batch = "import_exercise_batch.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/README.md",
    "/pyproject.toml",
    "/config/tags_config.json",
]

[tool.hatch.build.targets.wheel]
packages = ["src/import_exercise_batch"]

[tool.hatch.build.targets.wheel.force-include]
"config/tags_config.json" = "src/import_exercise_batch/resources/tags_config.json"

[tool.uv]
package = true

[tool.uv.workspace]
members = [
    "libs/clients/codereviewapi",
    "libs/clients/codereviewai",
]

[tool.uv.sources]
code_review_api_client = { workspace = true, editable = true }
code_review_ai_client = { workspace = true, editable = true }
