[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "review-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.121.0",
    "google-cloud-aiplatform>=1.125.0",
    "google-genai>=1.48.0",
    "google-generativeai>=0.8.5",
    "langchain>=1.0.3",
    "langchain-core>=1.0.3",
    "langgraph>=1.0.2",
    "neo4j>=5.28.1",
    "ollama>=0.6.0",
    "openai>=2.7.1",
    "pydantic>=2.12.3",
    "uvicorn>=0.38.0",
]

[project.scripts]
review-agent = "app.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["app"]
